# StrecsFEM

./: .gitignore  CMakeLists.txt  frd2vtu.cpp  frd2vtu.h  main.cpp  simulation_config.cpp  simulation_config.h  step2inp.cpp  step2inp.h
resources/: FEMMeshGmsh_simp.frd  simple_canti.frd
step2inp/: ConstraintSetter.cpp  ConstraintSetter.h  InpWriter.cpp  InpWriter.h  LoadConditionSetter.cpp  LoadConditionSetter.h  MaterialSetter.cpp  MaterialSetter.h  MeshGenerator.cpp  MeshGenerator.h
